[gd_scene load_steps=12 format=2]

[ext_resource path="res://addons/lospec_palette_list/components/color_selector_container/color_selector_container.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/lospec_palette_list/components/search_and_sort_container/search_and_sort_container.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/lospec_palette_list/components/download_path_container/download_path_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/lospec_palette_list/components/pagination_container/pagination_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/lospec_palette_list/components/results_container/results_container.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/lospec_palette_list/components/overlay_container/overlay_container.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/lospec_palette_list/main_window.gd" type="Script" id=7]
[ext_resource path="res://addons/lospec_palette_list/resources/button_group_filter_type.tres" type="ButtonGroup" id=8]
[ext_resource path="res://addons/lospec_palette_list/resources/button_group_sort.tres" type="ButtonGroup" id=9]
[ext_resource path="res://addons/lospec_palette_list/components/dialogs/about_dialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/lospec_palette_list/components/dialogs/download_path_file_dialog.tscn" type="PackedScene" id=11]

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSelectorContainer" parent="MainContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_right = 984.0
margin_bottom = 80.0

[node name="ColorSelectorLabel" parent="MainContainer/ColorSelectorContainer" index="0"]
margin_right = 984.0

[node name="Margin10" parent="MainContainer/ColorSelectorContainer" index="1"]
margin_right = 984.0

[node name="HBoxContainer" parent="MainContainer/ColorSelectorContainer" index="2"]
margin_right = 984.0

[node name="FilterTypeButtonsContainer" parent="MainContainer/ColorSelectorContainer/HBoxContainer" index="0"]
margin_right = 478.0

[node name="Any" parent="MainContainer/ColorSelectorContainer/HBoxContainer/FilterTypeButtonsContainer" index="0"]
margin_right = 116.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
group = ExtResource( 8 )

[node name="Max" parent="MainContainer/ColorSelectorContainer/HBoxContainer/FilterTypeButtonsContainer" index="1"]
margin_left = 120.0
margin_right = 237.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 8 )

[node name="Min" parent="MainContainer/ColorSelectorContainer/HBoxContainer/FilterTypeButtonsContainer" index="2"]
margin_left = 241.0
margin_right = 357.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 8 )

[node name="Exact" parent="MainContainer/ColorSelectorContainer/HBoxContainer/FilterTypeButtonsContainer" index="3"]
margin_left = 361.0
margin_right = 478.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 8 )

[node name="Margin20" parent="MainContainer/ColorSelectorContainer/HBoxContainer" index="1"]
margin_left = 482.0
margin_right = 502.0

[node name="SliderContainer" parent="MainContainer/ColorSelectorContainer/HBoxContainer" index="2"]
margin_left = 506.0
margin_right = 984.0

[node name="Slider" parent="MainContainer/ColorSelectorContainer/HBoxContainer/SliderContainer" index="2"]
margin_right = 478.0

[node name="Margin20" parent="MainContainer/ColorSelectorContainer" index="3"]
margin_right = 984.0

[node name="SearchAndSortContainer" parent="MainContainer" instance=ExtResource( 2 )]

[node name="SearchByTagLabel" parent="MainContainer/SearchAndSortContainer/SearchByTagContainer" index="0"]
margin_right = 478.0

[node name="Margin10" parent="MainContainer/SearchAndSortContainer/SearchByTagContainer" index="1"]
margin_right = 478.0

[node name="SearchByTagLineEdit" parent="MainContainer/SearchAndSortContainer/SearchByTagContainer" index="2"]
margin_right = 478.0

[node name="Margin20" parent="MainContainer/SearchAndSortContainer/SearchByTagContainer" index="3"]
margin_right = 478.0

[node name="SortingLabel" parent="MainContainer/SearchAndSortContainer/SortingContainer" index="0"]
margin_right = 478.0

[node name="Margin10" parent="MainContainer/SearchAndSortContainer/SortingContainer" index="1"]
margin_right = 478.0

[node name="SortingButtonsContainer" parent="MainContainer/SearchAndSortContainer/SortingContainer" index="2"]
margin_right = 478.0
margin_bottom = 56.0

[node name="Default" parent="MainContainer/SearchAndSortContainer/SortingContainer/SortingButtonsContainer" index="0"]
margin_right = 116.0
margin_bottom = 24.0
toggle_mode = true
pressed = true
group = ExtResource( 9 )

[node name="Alphabetical" parent="MainContainer/SearchAndSortContainer/SortingContainer/SortingButtonsContainer" index="1"]
margin_left = 120.0
margin_right = 237.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 9 )

[node name="Downloads" parent="MainContainer/SearchAndSortContainer/SortingContainer/SortingButtonsContainer" index="2"]
margin_left = 241.0
margin_right = 357.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 9 )

[node name="Newest" parent="MainContainer/SearchAndSortContainer/SortingContainer/SortingButtonsContainer" index="3"]
margin_left = 361.0
margin_right = 478.0
margin_bottom = 24.0
toggle_mode = true
group = ExtResource( 9 )

[node name="Margin20" parent="MainContainer/SearchAndSortContainer/SortingContainer" index="3"]
margin_top = 60.0
margin_right = 478.0
margin_bottom = 80.0

[node name="ResultsAndDowloadPathContainer" type="VBoxContainer" parent="MainContainer"]
margin_top = 168.0
margin_right = 984.0
margin_bottom = 206.0

[node name="ResultsAndDownloadPathWrapper" type="HBoxContainer" parent="MainContainer/ResultsAndDowloadPathContainer"]
margin_right = 984.0
margin_bottom = 24.0

[node name="ResultsWrapper" type="HBoxContainer" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper"]
margin_right = 478.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ResultsContainer" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_right = 261.0
margin_bottom = 24.0

[node name="ResultsLabel" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/ResultsContainer" index="0"]
margin_top = 5.0
margin_right = 89.0
margin_bottom = 19.0
text = "2209 results"

[node name="Margin20" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/ResultsContainer" index="1"]
margin_left = 93.0
margin_right = 113.0
margin_bottom = 24.0

[node name="PaginationContainer" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_left = 265.0
margin_right = 478.0
margin_bottom = 24.0

[node name="PaginationLabel" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/PaginationContainer" index="0"]
margin_top = 5.0
margin_right = 37.0
margin_bottom = 19.0
text = "1/221"

[node name="Margin5_01" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/PaginationContainer" index="1"]
margin_left = 41.0
margin_right = 46.0
margin_bottom = 24.0

[node name="PreviousButton" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/PaginationContainer" index="2"]
margin_left = 50.0
margin_right = 125.0
margin_bottom = 24.0
disabled = true

[node name="Margin5_02" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/PaginationContainer" index="3"]
margin_left = 129.0
margin_right = 134.0
margin_bottom = 24.0

[node name="NextButton" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/PaginationContainer" index="4"]
margin_left = 138.0
margin_right = 213.0
margin_bottom = 24.0

[node name="Margin20" type="MarginContainer" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper"]
margin_left = 482.0
margin_right = 502.0
margin_bottom = 24.0
rect_min_size = Vector2( 20, 0 )

[node name="DownloadPathContainer" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_left = 506.0
margin_right = 984.0

[node name="DownloadPathLineEdit" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/DownloadPathContainer" index="1"]
margin_right = 399.0
text = "res://"

[node name="DownloadPathButton" parent="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/DownloadPathContainer" index="2"]
margin_left = 403.0
margin_right = 478.0

[node name="Margin10" type="MarginContainer" parent="MainContainer/ResultsAndDowloadPathContainer"]
margin_top = 28.0
margin_right = 984.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 10 )

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
margin_top = 210.0
margin_right = 984.0
margin_bottom = 220.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 10 )

[node name="PalettesContainer" type="Control" parent="MainContainer"]
margin_top = 224.0
margin_right = 984.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OverlayContainer" parent="MainContainer/PalettesContainer" instance=ExtResource( 6 )]
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/PalettesContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="MainContainer/PalettesContainer/ScrollContainer"]
margin_right = 972.0
margin_bottom = 3132.0
size_flags_horizontal = 3
columns = 2

[node name="ExtraButtonsContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -209.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 20.0
grow_horizontal = 0
alignment = 2

[node name="DownloadPalettes" type="Button" parent="ExtraButtonsContainer"]
visible = false
margin_right = 131.0
margin_bottom = 20.0
grow_horizontal = 0
size_flags_horizontal = 8
text = "Download palettes"

[node name="Margin10" type="MarginContainer" parent="ExtraButtonsContainer"]
margin_left = 135.0
margin_right = 145.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 0 )

[node name="AboutButton" type="Button" parent="ExtraButtonsContainer"]
margin_left = 149.0
margin_right = 199.0
margin_bottom = 20.0
size_flags_horizontal = 8
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogLayer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBackground" type="ColorRect" parent="DialogLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AboutDialog" parent="DialogLayer" instance=ExtResource( 10 )]
margin_right = 768.0
margin_bottom = 576.0

[node name="DownloadPathFileDialog" parent="DialogLayer" instance=ExtResource( 11 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 274.0
margin_top = 242.0
margin_right = 750.0
margin_bottom = 526.0

[editable path="MainContainer/ColorSelectorContainer"]
[editable path="MainContainer/ColorSelectorContainer/HBoxContainer/FilterTypeButtonsContainer"]
[editable path="MainContainer/ColorSelectorContainer/HBoxContainer/SliderContainer"]
[editable path="MainContainer/SearchAndSortContainer"]
[editable path="MainContainer/SearchAndSortContainer/SearchByTagContainer"]
[editable path="MainContainer/SearchAndSortContainer/SortingContainer"]
[editable path="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/ResultsContainer"]
[editable path="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/ResultsWrapper/PaginationContainer"]
[editable path="MainContainer/ResultsAndDowloadPathContainer/ResultsAndDownloadPathWrapper/DownloadPathContainer"]
